# QtQuick-with-cmake

./: CMakeLists.txt  README.md  build.bat
src/: main.cpp
